@@ -34,9 +34,10 @@ test databases. Use an empty password for said user.
 
 == Running with Rake
 
-The easiest way to run the unit tests is through Rake. Either run "rake test_sqlserver" 
-or "rake test_sqlserver_odbc". For more information, checkout the full array 
-of rake tasks with "rake -T"
+The easiest way to run the unit tests is through Rake. Either run "rake test" which 
+defaults to ODBC mode or being mode specific using either "rake sqlserver:test:adonet" 
+or "rake sqlserver:test:odbc". For more information, checkout the full array of rake tasks 
+with "rake -T"
 
 Rake can be found at http://rake.rubyforge.org
 
