@@ -1,4 +1,4 @@
-print "Using native SQLServer\n"
+print "Using SQLServer via ADONET\n"
 require_dependency 'models/course'
 require 'logger'
 
@@ -7,12 +7,14 @@ ActiveRecord::Base.logger = Logger.new("debug.log")
 ActiveRecord::Base.configurations = {
   'arunit' => {
     :adapter  => 'sqlserver',
+    :mode     => 'ADONET',
     :host     => 'localhost',
     :username => 'rails',
     :database => 'activerecord_unittest'
   },
   'arunit2' => {
     :adapter  => 'sqlserver',
+    :mode     => 'ADONET',
     :host     => 'localhost',
     :username => 'rails',
     :database => 'activerecord_unittest2'
